# dynamic-context-evolution

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
analysis/: analyze_category_quality.py  analyze_cluster_counts.py  analyze_cluster_stability.py  analyze_collapse_comparison.py  analyze_cost.py  analyze_downstream.py  analyze_downstream_detail.py  analyze_edv_formulations.py  analyze_embedding_space.py  analyze_exp1.py  analyze_exp2.py  analyze_multi_seed.py  analyze_per_strategy.py  analyze_seed_rotation.py  analyze_sensitivity.py  analyze_sensitivity_thresholds.py  analyze_vts_centroid.py  analyze_vts_confusion.py  analyze_vts_distribution.py  generate_delta_tradeoff.py  generate_edv_two_panel.py  plot_utils.py  validate_edv.py
docs/: index.html
docs/static/css/: index.css
docs/static/js/: index.js
experiments/: run_downstream.py  run_exp1_collapse.py  run_exp2_comparison.py  run_multi_seed.py  run_sensitivity.py  run_sensitivity_thresholds.py
prompts/: base_generation.txt  strategy_constraint.txt  strategy_cross_industry.txt  strategy_gap.txt  strategy_inversion.txt  vts_instruction.txt
src/: domain_config.py  embeddings.py  generator.py  memory.py  metrics.py  prompt_evolution.py  schemas.py  vts.py
tests/: test_memory.py  test_metrics.py  test_prompt_evolution.py  test_vts.py
